force-app/main/default/objects/Education__c/fields/Curriculum__c.field-meta.xml
<CustomField>
    <fullName>Curriculum__c</fullName>
    <label>Curriculum</label>
    <referenceTo>Curriculum__c</referenceTo>
    <relationshipLabel>Educations</relationshipLabel>
    <relationshipName>Educations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>