force-app/main/default/objects/Education__c/fields/Finishing_Date__c.field-meta.xml
<CustomField>
    <fullName>Finishing_Date__c</fullName>
    <label>Finishing Date</label>
    <type>Date</type>
</CustomField>