force-app/main/default/objects/Education__c/fields/Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Institution_Name__c</fullName>
    <label>Institution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>